@@ -33,6 +33,7 @@ K  6108	When using XGWTRUSTEDAPP mechanism, LOGIN should not be issued if no
 K  6125	support empty IMAP ENVELOPE address list instead of NIL
 K  6137	JavaMail should support the IMAP ID extension
 K  6141	Typo: "mechansims"
+K  6160	Exchange returns out of range message numbers for SEARCH
 
 
 		  CHANGES IN THE 1.5.0 RELEASE
